--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "supertokens-auth-react": "^0.31.0",
     "supertokens-node": "^13.1.5",
     "supertokens-web-js": "^0.5.0",
+    "swr": "^2.1.3",
     "twilio": "^3.73.1"
   },
   "devDependencies": {
