--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "patient-portal-ui-next",
-  "version": "0.1.0",
+  "name": "patient-portal-ui-next-vercel",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 192.168.1.66",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.124",
-    "@mui/material": "^5.11.15",
-    "@mui/x-data-grid": "^6.0.4",
-    "axios": "^0.21.4",
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/lab": "latest",
+    "@mui/material": "latest",
+    "@mui/x-data-grid": "latest",
+    "axios": "latest",
     "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "supertokens-auth-react": "^0.31.0",
-    "supertokens-node": "^13.1.5",
+    "nextjs-cors": "^2.1.2",
+    "react": "latest",
+    "react-dom": "latest",
+    "supertokens-auth-react": "latest",
+    "supertokens-node": "latest",
     "supertokens-web-js": "^0.5.0",
-    "swr": "^2.1.3",
-    "twilio": "^3.73.1"
+    "swr": "latest",
+    "twilio": "latest"
   },
   "devDependencies": {
-    "@types/node": "18.7.13",
-    "@types/react": "18.0.17",
-    "typescript": "^4.8.2"
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "typescript": "^4.9.5"
   }
 }
